fix the alignment of the legend text

--- a/PingComingSoonPage/styles.css
+++ b/PingComingSoonPage/styles.css
@@ -283,7 +283,7 @@ form #email-submit-btn:hover {
         width: 8.4rem;
     }
     #hero-heading {
-        margin: 4rem auto -1.5rem auto;
+        margin: 4rem auto 1rem auto;
         font-size: 4.7rem;
     }
     form {
